RESOLVED FIXED36135
GCController::garbageCollectNow() crashes when called from garbage collection
https://bugs.webkit.org/show_bug.cgi?id=36135
Summary GCController::garbageCollectNow() crashes when called from garbage collection
Cameron Zwarich (cpst)
Reported 2010-03-15 13:42:08 PDT
GCController::garbageCollectNow() crashes when called from garbage collection, as the collector triggers CRASH() when it is called reentrantly. It would be better to silently fail than to crash.
Attachments
Propose patch (1.25 KB, patch)
2010-03-15 13:52 PDT, Cameron Zwarich (cpst)
ggaren: review+
Cameron Zwarich (cpst)
Comment 1 2010-03-15 13:42:28 PDT
Cameron Zwarich (cpst)
Comment 2 2010-03-15 13:52:41 PDT
Created attachment 50733 [details] Propose patch
Geoffrey Garen
Comment 3 2010-03-15 14:37:29 PDT
Comment on attachment 50733 [details] Propose patch r=me
Cameron Zwarich (cpst)
Comment 4 2010-03-15 14:57:08 PDT
Fixed in r56018.
Note You need to log in before you can comment on or make changes to this bug.