third_party/WebKit/WebCore/bindings/js/GCController.cpp
@@ -72,7 +72,9 @@ void GCController::gcTimerFired(Timer<GCController>*)
 
 void GCController::garbageCollectNow()
 {
-    collect(0);
+    JSLock lock(SilenceAssertionsOnly);
+    if (!JSDOMWindow::commonJSGlobalData()->heap.isBusy())
+        collect(0);
 }
 
 void GCController::garbageCollectOnAlternateThreadForDebugging(bool waitUntilDone)
